--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -118,6 +118,33 @@
         margin-bottom: 10px;
         font-size: 1.1rem;
       }
+
+      .navigation {
+        text-align: center;
+        margin: 30px 0;
+        padding: 20px;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        border-radius: 10px;
+      }
+
+      .nav-link {
+        display: inline-block;
+        padding: 12px 30px;
+        background-color: white;
+        color: #667eea;
+        text-decoration: none;
+        border-radius: 25px;
+        font-weight: bold;
+        transition: all 0.3s ease;
+        margin: 0 10px;
+      }
+
+      .nav-link:hover {
+        background-color: #2c3e50;
+        color: white;
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      }
     </style>
   </head>
   <body>
@@ -126,6 +153,10 @@
         <h1>Welcome to My Cool First Webpage! 🚀</h1>
         <p>Exploring the amazing world of web development with ALX</p>
       </header>
+
+      <div class="navigation">
+        <a href="tweets.html" class="nav-link">📱 View My Tweets</a>
+      </div>
 
       <div class="content">
         <h2>About This Journey</h2>
