--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,84 +13,147 @@
       }
 
       body {
-        background: linear-gradient(135deg, #ff6b6b 0%, #feca57 100%);
+        background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
         color: #333;
         line-height: 1.6;
         padding: 20px;
         min-height: 100vh;
+        display: flex;
+        flex-direction: column;
       }
 
       .container {
-        max-width: 900px;
+        max-width: 1200px;
         margin: 0 auto;
         background-color: white;
         border-radius: 15px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        padding: 40px;
-        margin-top: 30px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        overflow: hidden;
       }
 
       header {
+        background: linear-gradient(135deg, #34495e 0%, #2c3e50 100%);
+        padding: 20px 0;
         text-align: center;
-        margin-bottom: 40px;
-        padding-bottom: 20px;
-        border-bottom: 2px solid #eaeaea;
+        border-bottom: 3px solid #ecf0f1;
+      }
+
+      header ul {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        flex-wrap: wrap;
+      }
+
+      header a {
+        color: #ecf0f1;
+        text-decoration: none;
+        padding: 12px 25px;
+        border-radius: 25px;
+        transition: all 0.3s ease;
+        font-weight: bold;
+        background-color: rgba(52, 73, 94, 0.8);
+        border: 2px solid #bdc3c7;
+      }
+
+      header a:hover {
+        background-color: #ecf0f1;
+        color: #2c3e50;
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      }
+
+      main {
+        display: flex;
+        min-height: 500px;
+      }
+
+      article {
+        flex: 3;
+        padding: 40px;
+        background-color: #ffffff;
+      }
+
+      aside {
+        flex: 1;
+        background-color: #ecf0f1;
+        padding: 40px 20px;
+        border-left: 3px solid #bdc3c7;
+      }
+
+      aside p {
+        background-color: #d5dbdb;
+        padding: 20px;
+        border-radius: 8px;
+        text-align: center;
+        font-style: italic;
+        color: #2c3e50;
+        border: 1px solid #bdc3c7;
       }
 
       h1 {
         color: #2c3e50;
         margin-bottom: 15px;
         font-size: 2.5rem;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
       }
 
       h2 {
-        color: #3498db;
+        color: #34495e;
         margin: 30px 0 15px;
         font-size: 1.8rem;
-        border-left: 4px solid #3498db;
+        border-left: 4px solid #7f8c8d;
         padding-left: 15px;
+      }
+
+      h3 {
+        color: #2c3e50;
+        margin: 25px 0 12px;
+        font-size: 1.4rem;
+        background-color: #ecf0f1;
+        padding: 10px 15px;
+        border-radius: 5px;
+        border-left: 4px solid #95a5a6;
       }
 
       p {
         margin-bottom: 20px;
         font-size: 1.1rem;
         text-align: justify;
+        color: #2c3e50;
       }
 
-      .navigation {
+      footer {
+        background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
+        color: #ecf0f1;
         text-align: center;
-        margin: 30px 0;
         padding: 20px;
-        background: linear-gradient(135deg, #ff6b6b 0%, #feca57 100%);
-        border-radius: 10px;
+        border-top: 3px solid #ecf0f1;
       }
 
-      .nav-link {
-        display: inline-block;
-        padding: 12px 30px;
-        background-color: white;
-        color: #ff6b6b;
+      footer p {
+        margin: 0;
+        text-align: center;
+        color: #ecf0f1;
+      }
+
+      footer a {
+        color: #3498db;
         text-decoration: none;
-        border-radius: 25px;
         font-weight: bold;
-        transition: all 0.3s ease;
-        margin: 0 10px;
       }
 
-      .nav-link:hover {
-        background-color: #2c3e50;
-        color: white;
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      footer a:hover {
+        text-decoration: underline;
+        color: #2980b9;
       }
 
       .tweet-container {
         margin: 30px 0;
         padding: 20px;
-        background-color: #f8f9fa;
+        background-color: #ecf0f1;
         border-radius: 10px;
-        border: 2px solid #e9ecef;
+        border: 2px solid #bdc3c7;
       }
 
       .tweet-embed {
@@ -98,46 +161,56 @@
         margin: 0 auto;
         border-radius: 12px;
         overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       }
 
-      footer {
+      .navigation {
         text-align: center;
-        margin-top: 40px;
-        padding-top: 20px;
-        border-top: 2px solid #eaeaea;
-        color: #7f8c8d;
-        font-size: 0.9rem;
-      }
-
-      .tweet-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 20px;
         margin: 30px 0;
+        padding: 20px;
+        background: linear-gradient(135deg, #95a5a6 0%, #7f8c8d 100%);
+        border-radius: 10px;
+        border: 2px solid #bdc3c7;
       }
 
-      .tweet-card {
-        background: white;
-        border-radius: 12px;
-        padding: 20px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        border: 1px solid #e1e8ed;
+      .nav-link {
+        display: inline-block;
+        padding: 12px 30px;
+        background-color: #ecf0f1;
+        color: #2c3e50;
+        text-decoration: none;
+        border-radius: 25px;
+        font-weight: bold;
+        transition: all 0.3s ease;
+        margin: 0 10px;
+        border: 2px solid #bdc3c7;
+      }
+
+      .nav-link:hover {
+        background-color: #2c3e50;
+        color: #ecf0f1;
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <header>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
+
+    <main>
+      <article>
         <h1>My Tweet Collection 🐦</h1>
         <p>Sharing thoughts, ideas, and inspiration from the tech world</p>
-      </header>
 
-      <div class="navigation">
-        <a href="index.html" class="nav-link">🏠 Back to Homepage</a>
-      </div>
+        <div class="navigation">
+          <a href="index.html" class="nav-link">🏠 Back to Homepage</a>
+        </div>
 
-      <div class="content">
         <h2>Tech Inspiration & Thoughts</h2>
         <p>
           Here are some interesting tweets about technology, programming, and
@@ -148,11 +221,10 @@
 
         <div class="tweet-container">
           <h3>Inspirational Tech Quote</h3>
-          <!-- Embedded Tweet 1 -->
           <blockquote class="twitter-tweet">
             <p lang="en" dir="ltr">
-              The most dangerous phrase in the language is, “We’ve always done
-              it this way.” - Grace Hopper
+              The most dangerous phrase in the language is, "We've always done
+              it this way." - Grace Hopper
               <a
                 href="https://twitter.com/hashtag/technology?src=hash&amp;ref_src=twsrc%5Etfw"
                 >#technology</a
@@ -177,7 +249,6 @@
 
         <div class="tweet-container">
           <h3>Web Development Wisdom</h3>
-          <!-- Embedded Tweet 2 -->
           <blockquote class="twitter-tweet">
             <p lang="en" dir="ltr">
               Web development is the art of turning coffee into code and ideas
@@ -210,12 +281,11 @@
 
         <div class="tweet-container">
           <h3>Learning to Code</h3>
-          <!-- Embedded Tweet 3 -->
           <blockquote class="twitter-tweet">
             <p lang="en" dir="ltr">
-              Learning to code is like learning a new language. It&#39;s
-              challenging at first, but once you understand the syntax and
-              logic, you can create anything you imagine.
+              Learning to code is like learning a new language. It's challenging
+              at first, but once you understand the syntax and logic, you can
+              create anything you imagine.
               <a
                 href="https://twitter.com/hashtag/LearnToCode?src=hash&amp;ref_src=twsrc%5Etfw"
                 >#LearnToCode</a
@@ -240,12 +310,11 @@
 
         <div class="tweet-container">
           <h3>Future of Technology</h3>
-          <!-- Embedded Tweet 4 -->
           <blockquote class="twitter-tweet">
             <p lang="en" dir="ltr">
               The best way to predict the future is to invent it. - Alan Kay<br /><br />This
               especially rings true in technology and software development.
-              We&#39;re not just using tools, we&#39;re creating the future.
+              We're not just using tools, we're creating the future.
               <a
                 href="https://twitter.com/hashtag/FutureTech?src=hash&amp;ref_src=twsrc%5Etfw"
                 >#FutureTech</a
@@ -267,15 +336,18 @@
             charset="utf-8"
           ></script>
         </div>
-      </div>
+      </article>
 
-      <div class="navigation">
-        <a href="index.html" class="nav-link">🏠 Back to Homepage</a>
-      </div>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
 
-      <footer>
-        <p>Created with ❤️ for ALX Web Development Portfolio | &copy; 2024</p>
-      </footer>
-    </div>
+    <footer>
+      <p>
+        Made by Abubakari Issah -
+        <a href="https://github.com/assaawin" target="_blank">here</a>
+      </p>
+    </footer>
   </body>
 </html>
