--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -61,6 +61,20 @@
         min-height: 500px;
       }
 
+      article {
+        margin-bottom: 30px;
+      }
+
+      aside {
+        background-color: #ecf0f1;
+        padding: 20px;
+        border-radius: 8px;
+        text-align: center;
+        font-style: italic;
+        color: #666;
+        border: 1px solid #bdc3c7;
+      }
+
       footer {
         background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
         color: #ecf0f1;
@@ -81,7 +95,13 @@
         font-weight: bold;
       }
 
-      /* Rest of tweet-specific styles remain */
+      .tweet-container {
+        margin: 20px 0;
+        padding: 15px;
+        background-color: #f8f9fa;
+        border-radius: 10px;
+        border: 2px solid #e9ecef;
+      }
     </style>
   </head>
   <body>
@@ -93,65 +113,48 @@
     </header>
 
     <main>
-      <!-- All content goes directly in main - NO article or aside tags -->
-      <h1>My Tweet Collection 🐦</h1>
-      <p>Sharing thoughts, ideas, and inspiration from the tech world</p>
+      <article>
+        <h1>My Tweet Collection 🐦</h1>
+        <p>Sharing thoughts, ideas, and inspiration from the tech world</p>
 
-      <div class="navigation">
-        <a href="index.html" class="nav-link">🏠 Back to Homepage</a>
-      </div>
+        <h2>Tech Inspiration & Thoughts</h2>
+        <p>
+          Here are some interesting tweets about technology, programming, and
+          web development that inspire me on my learning journey.
+        </p>
 
-      <h2>Tech Inspiration & Thoughts</h2>
-      <p>
-        Here are some interesting tweets about technology, programming, and web
-        development that inspire me on my learning journey.
-      </p>
-
-      <!-- Embedded tweets -->
-      <div class="tweet-container">
-        <h3>Inspirational Tech Quote</h3>
-        <blockquote class="twitter-tweet">
-          <p lang="en" dir="ltr">
-            The most dangerous phrase in the language is, "We've always done it
-            this way." - Grace Hopper
+        <div class="tweet-container">
+          <h3>Inspirational Tech Quote</h3>
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">
+              The most dangerous phrase in the language is, "We've always done
+              it this way." - Grace Hopper
+              <a
+                href="https://twitter.com/hashtag/technology?src=hash&amp;ref_src=twsrc%5Etfw"
+                >#technology</a
+              >
+              <a
+                href="https://twitter.com/hashtag/innovation?src=hash&amp;ref_src=twsrc%5Etfw"
+                >#innovation</a
+              >
+            </p>
+            &mdash; Tech Wisdom (@TechWisdomQuotes)
             <a
-              href="https://twitter.com/hashtag/technology?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#technology</a
+              href="https://twitter.com/TechWisdomQuotes/status/1581234567891230720?ref_src=twsrc%5Etfw"
+              >October 15, 2022</a
             >
-            <a
-              href="https://twitter.com/hashtag/innovation?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#innovation</a
-            >
-          </p>
-          &mdash; Tech Wisdom (@TechWisdomQuotes)
-          <a
-            href="https://twitter.com/TechWisdomQuotes/status/1581234567891230720?ref_src=twsrc%5Etfw"
-            >October 15, 2022</a
-          >
-        </blockquote>
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
-      </div>
+          </blockquote>
+          <script
+            async
+            src="https://platform.twitter.com/widgets.js"
+            charset="utf-8"
+          ></script>
+        </div>
+      </article>
 
-      <!-- More tweets... -->
-
-      <!-- The "placeholder to add comment thread later" should be in main content -->
-      <div
-        style="
-          background-color: #ecf0f1;
-          padding: 20px;
-          border-radius: 8px;
-          margin: 20px 0;
-          text-align: center;
-          font-style: italic;
-          color: #666;
-        "
-      >
+      <aside>
         <p>placeholder to add comment thread later</p>
-      </div>
+      </aside>
     </main>
 
     <footer>
