--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,108 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Cool First Webpage</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Arial", sans-serif;
-      }
-
-      body {
-        background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
-        color: #333;
-        line-height: 1.6;
-        padding: 20px;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        background-color: white;
-        border-radius: 15px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-        overflow: hidden;
-      }
-
-      header {
-        background: linear-gradient(135deg, #34495e 0%, #2c3e50 100%);
-        padding: 20px 0;
-        text-align: center;
-        border-bottom: 3px solid #ecf0f1;
-      }
-
-      header ul {
-        list-style: none;
-        display: flex;
-        justify-content: center;
-        gap: 30px;
-        flex-wrap: wrap;
-      }
-
-      header a {
-        color: #ecf0f1;
-        text-decoration: none;
-        padding: 12px 25px;
-        border-radius: 25px;
-        transition: all 0.3s ease;
-        font-weight: bold;
-        background-color: rgba(52, 73, 94, 0.8);
-        border: 2px solid #bdc3c7;
-      }
-
-      header a:hover {
-        background-color: #ecf0f1;
-        color: #2c3e50;
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      }
-
-      main {
-        padding: 40px;
-        background-color: #ffffff;
-        min-height: 500px;
-      }
-
-      article {
-        margin-bottom: 30px;
-      }
-
-      aside {
-        background-color: #ecf0f1;
-        padding: 20px;
-        border-radius: 8px;
-        text-align: center;
-        font-style: italic;
-        color: #666;
-        border: 1px solid #bdc3c7;
-      }
-
-      footer {
-        background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
-        color: #ecf0f1;
-        text-align: center;
-        padding: 20px;
-        border-top: 3px solid #ecf0f1;
-      }
-
-      footer p {
-        margin: 0;
-        text-align: center;
-        color: #ecf0f1;
-      }
-
-      footer a {
-        color: #3498db;
-        text-decoration: none;
-        font-weight: bold;
-      }
-
-      /* Rest of styling remains */
-    </style>
   </head>
   <body>
     <header>
@@ -114,45 +12,28 @@
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
     </header>
-
     <main>
       <article>
-        <h1>Welcome to My Cool First Webpage! 🚀</h1>
+        <h1>Welcome to My Cool First Webpage!</h1>
         <p>Exploring the amazing world of web development with ALX</p>
 
         <h2>About This Journey</h2>
-        <p>
-          This webpage represents my first steps into the fascinating world of
-          web development. Learning HTML has opened up a new realm of
-          possibilities, allowing me to create structured, meaningful content
-          that can be accessed by people all around the world.
-        </p>
+        <p>This webpage represents my first steps into web development.</p>
 
         <h3>Why Web Development Matters</h3>
         <p>
           In today's digital age, web development skills are more valuable than
-          ever. The internet has become the primary platform for communication,
-          business, education, and entertainment.
+          ever.
         </p>
 
-        <div class="image-container">
-          <a href="https://www.alxafrica.com" target="_blank">
-            <img
-              src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-              alt="ALX Logo"
-              class="clickable-image"
-              title="Click to visit ALX Africa"
-            />
-          </a>
-          <p><em>Click the ALX logo to visit their official website!</em></p>
-        </div>
+        <a href="https://www.alxafrica.com" target="_blank">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
+        </a>
       </article>
-
       <aside>
         <p>placeholder to add comment thread later</p>
       </aside>
     </main>
-
     <footer>
       <p>
         Made by Abubakari Issah -
