Update website structure with header, main, footer and navigation

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Cool First Webpage</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <header>
@@ -14,21 +13,16 @@
     </header>
     <main>
       <article>
-        <h1>Welcome to My Cool First Webpage!</h1>
-        <p>Exploring the amazing world of web development with ALX</p>
-
-        <h2>About This Journey</h2>
-        <p>This webpage represents my first steps into web development.</p>
-
-        <h3>Why Web Development Matters</h3>
-        <p>
-          In today's digital age, web development skills are more valuable than
-          ever.
-        </p>
-
-        <a href="https://www.alxafrica.com" target="_blank">
+        <h1>Welcome to My Portfolio</h1>
+        <p>This is my first webpage.</p>
+        <h2>About Me</h2>
+        <p>I am learning web development.</p>
+        <h3>My Goals</h3>
+        <p>I want to become a great developer.</p>
+        <a href="https://example.com">
           <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
         </a>
+        <a href="tweets.html">Check my tweets</a>
       </article>
       <aside>
         <p>placeholder to add comment thread later</p>
