--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Tweets - ALX Portfolio</title>
+    <title>My Tweets</title>
   </head>
   <body>
     <header>
@@ -14,28 +13,20 @@
     </header>
     <main>
       <article>
-        <h1>My Tweet Collection</h1>
-        <p>Sharing thoughts and inspiration from the tech world</p>
-
-        <h2>Tech Inspiration</h2>
-        <p>Interesting tweets about technology and programming.</p>
-
+        <h1>My Tweets</h1>
+        <p>Here are my favorite tweets.</p>
+        <h2>Tech Tweets</h2>
+        <p>Some inspiring tech tweets.</p>
+        <h3>Programming Wisdom</h3>
+        <p>Great quotes from developers.</p>
         <blockquote class="twitter-tweet">
           <p lang="en" dir="ltr">
             The most dangerous phrase in the language is, &quot;We&#39;ve always
             done it this way.&quot; - Grace Hopper
-            <a
-              href="https://twitter.com/hashtag/technology?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#technology</a
-            >
-            <a
-              href="https://twitter.com/hashtag/innovation?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#innovation</a
-            >
           </p>
           &mdash; Tech Wisdom (@TechWisdomQuotes)
           <a
-            href="https://twitter.com/TechWisdomQuotes/status/1581234567891230720?ref_src=twsrc%5Etfw"
+            href="https://twitter.com/TechWisdomQuotes/status/1581234567891230720"
             >October 15, 2022</a
           >
         </blockquote>
@@ -44,7 +35,6 @@
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"
         ></script>
-
         <a href="index.html">Back to homepage</a>
       </article>
       <aside>
