--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,38 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>My Portfolio</title>
-  </head>
-  <body>
-    <header>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
-    </header>
-    <main>
-      <article>
-        <h1>Welcome to My Portfolio</h1>
-        <p>This is my first webpage.</p>
-        <h2>About Me</h2>
-        <p>I am learning web development.</p>
-        <h3>My Goals</h3>
-        <p>I want to become a great developer.</p>
-        <a href="https://example.com">
-          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
-        </a>
-        <a href="tweets.html">Check my tweets</a>
-      </article>
-      <aside>
-        <p>placeholder to add comment thread later</p>
-      </aside>
-    </main>
-    <footer>
-      <p>
-        Made by Abubakari Issah -
-        <a href="https://github.com/assaawin" target="_blank">here</a>
-      </p>
-    </footer>
-  </body>
-</html>
+<body>
+  <header>...</header>
+  <main>
+    <article>...</article>
+    <aside>placeholder to add comment thread later</aside>
+  </main>
+  <footer>Made by ... - <a href=... target=...</footer>
+</body>
