Update website structure with header, main, footer and navigation

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,8 +1,50 @@
-<body>
-  <header>...</header>
-  <main>
-    <article>...</article>
-    <aside>placeholder to add comment thread later</aside>
-  </main>
-  <footer>Made by ... - <a href=... target=...</footer>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>My Tweets</title>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <h1>My Tweets</h1>
+        <p>Here are my favorite tweets.</p>
+
+        <!-- Only ONE embedded tweet -->
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            The most dangerous phrase in the language is, &quot;We&#39;ve always
+            done it this way.&quot; - Grace Hopper
+          </p>
+          &mdash; Tech Wisdom (@TechWisdomQuotes)
+          <a
+            href="https://twitter.com/TechWisdomQuotes/status/1581234567891230720"
+            >October 15, 2022</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+
+        <a href="index.html">Back to homepage</a>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      <p>
+        Made by Abubakari Issah -
+        <a href="https://github.com/assaawin" target="_blank">here</a>
+      </p>
+    </footer>
+  </body>
+</html>
