Update website structure with header, main, footer and navigation

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,7 +6,18 @@
     </ul>
   </header>
   <main>
-    <article>...</article>
+    <article>
+      <h1>Welcome to My Portfolio</h1>
+      <p>This is my first webpage.</p>
+      <h2>About Me</h2>
+      <p>I am learning web development.</p>
+      <h3>My Goals</h3>
+      <p>I want to become a great developer.</p>
+      <a href="https://example.com">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
+      </a>
+      <a href="tweets.html">Check my tweets</a>
+    </article>
     <aside>placeholder to add comment thread later</aside>
   </main>
   <footer>Made by ... - <a href=... target=...</footer>
