--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -7,9 +7,7 @@
   </header>
   <main>
     <article>
-      <a href="https://example.com">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" />
-      </a>
+      <a href="tweets.html">Check my tweets</a>
     </article>
     <aside>placeholder to add comment thread later</aside>
   </main>
