Task 0: Create basic HTML file base_index.html

--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -1,124 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Portfolio</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-
-      body {
-        background-color: #f5f7fa;
-        color: #333;
-        line-height: 1.6;
-        padding: 20px;
-      }
-
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-        background-color: white;
-        border-radius: 10px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        padding: 30px;
-      }
-
-      header {
-        text-align: center;
-        margin-bottom: 30px;
-        padding-bottom: 20px;
-        border-bottom: 1px solid #eaeaea;
-      }
-
-      h1 {
-        color: #2c3e50;
-        margin-bottom: 10px;
-      }
-
-      .subtitle {
-        color: #7f8c8d;
-        font-size: 1.2rem;
-      }
-
-      .content {
-        margin-bottom: 30px;
-      }
-
-      h2 {
-        color: #3498db;
-        margin: 20px 0 10px;
-      }
-
-      p {
-        margin-bottom: 15px;
-      }
-
-      ul {
-        margin-left: 20px;
-        margin-bottom: 20px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .validator-info {
-        background-color: #e8f4fc;
-        padding: 15px;
-        border-radius: 5px;
-        border-left: 4px solid #3498db;
-        margin-top: 20px;
-      }
-
-      footer {
-        text-align: center;
-        margin-top: 30px;
-        padding-top: 20px;
-        border-top: 1px solid #eaeaea;
-        color: #7f8c8d;
-        font-size: 0.9rem;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <h1>My First Portfolio</h1>
-        <p class="subtitle">A simple, valid HTML structure</p>
-      </header>
-
-      <div class="content">
-        <h2>About This Page</h2>
-        <p>This is a basic HTML file that follows all the requirements:</p>
-        <ul>
-          <li>Contains a valid DOCTYPE declaration</li>
-          <li>Has a properly structured head section with a title</li>
-          <li>Includes a body with semantic content</li>
-          <li>Uses valid HTML5 elements</li>
-        </ul>
-
-        <h2>HTML Validation</h2>
-        <p>
-          This page should pass the official HTML Validator without any errors
-          or warnings.
-        </p>
-
-        <div class="validator-info">
-          <p>
-            <strong>Tip:</strong> Always validate your HTML code to ensure it
-            follows web standards and works correctly across different browsers.
-          </p>
-        </div>
-      </div>
-
-      <footer>
-        <p>Created as part of the My_First_Portfolio project</p>
-      </footer>
-    </div>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic HTML Page</title>
+</head>
+<body>
+    
+</body>
 </html>
