--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Tweets</title>
-</head>
-<body>
-    <h1>My Embedded Tweets</h1>
-    
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Just setting up my Twitter. #myfirstTweet</p>
-        &mdash; Twitter (@Twitter) <a href="https://twitter.com/Twitter/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
-    </blockquote> 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    
-    <p><a href="index.html">← Back to Homepage</a></p>
-</body>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <h1>My Embedded Tweets</h1>
+
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">Just setting up my Twitter. #myfirstTweet</p>
+          &mdash; Twitter (@Twitter)
+          <a href="https://twitter.com/Twitter/status/20?ref_src=twsrc%5Etfw"
+            >March 21, 2006</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+
+        <p><a href="index.html">← Back to Homepage</a></p>
+      </article>
+    </main>
+    <footer>
+      <p>
+        Made by Abubakari Issah -
+        <a href="https://www.alxafrica.com" target="_blank">here</a>
+      </p>
+    </footer>
+  </body>
 </html>
